--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -110,7 +110,6 @@ body { font-family: 'Lato', sans-serif; background: #f4f0ea; color: #333; displa
 .bar:hover::after { content: attr(data-value); position: absolute; top: -28px; left: 50%; transform: translateX(-50%); background: var(--marrom); color: white; padding: 3px 8px; border-radius: 4px; font-size: 11px; font-weight: 700; white-space: nowrap; }
 .bar-label { font-size: 10px; color: #aaa; font-weight: 700; text-transform: uppercase; }
 
-.recent-orders { }
 .order-row { display: flex; align-items: center; gap: 16px; padding: 14px 0; border-bottom: 1px solid #f4f0ea; }
 .order-row:last-child { border-bottom: none; }
 .order-id { font-weight: 900; font-size: 12px; color: var(--marrom); width: 120px; }
@@ -174,7 +173,6 @@ tr:hover td { background: #faf7f2; }
 .fg textarea { resize: vertical; min-height: 80px; }
 .fg .hint { font-size: 11px; color: #aaa; margin-top: 4px; }
 
-.order-detail { }
 .order-detail-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 20px; margin-bottom: 20px; }
 .detail-section h4 { font-family: 'Playfair Display', serif; font-size: 15px; font-weight: 700; color: var(--vermelho); margin-bottom: 10px; }
 .detail-row { display: flex; justify-content: space-between; font-size: 13px; padding: 4px 0; border-bottom: 1px solid #f4f0ea; }
@@ -343,7 +341,7 @@ tr:hover td { background: #faf7f2; }
         <div class="card">
           <div class="card-header">
             <span class="card-title">Últimos Pedidos</span>
-            <button class="btn btn-sm btn-secondary" onclick="showPage('orders', document.querySelector('[onclick*=\"orders\"]'))">Ver todos</button>
+            <button class="btn btn-sm btn-secondary" onclick="showPage('orders', document.querySelector('.nav-item:nth-of-type(3)'))">Ver todos</button>
           </div>
           <div id="recentOrders"></div>
         </div>
@@ -457,13 +455,24 @@ tr:hover td { background: #faf7f2; }
 
 <script>
 const STORAGE_KEYS = { products: 'cia_products', orders: 'cia_orders' };
-const API_URL = 'http://localhost:3000/api/products';
+
+// Detectar ambiente e definir URL da API corretamente
+function getApiUrl() {
+  const hostname = window.location.hostname;
+  if (hostname === 'localhost' || hostname === '127.0.0.1' || hostname.includes('localhost')) {
+    return 'http://localhost:3000/api';
+  }
+  // Em produção, use a mesma origem do frontend ou configure uma variável de ambiente
+  return window.location.origin.replace(/https?:/, 'https:').replace('spiffy-toffee-4276f3.netlify.app', 'SEU_DOMINIO_API.com') + '/api';
+}
+
+const API_URL = getApiUrl();
 let useApi = false;
 
 // Verificar se a API está disponível
 async function checkApiAvailability() {
   try {
-    const response = await fetch(API_URL + '/admin/all', { method: 'HEAD', mode: 'cors' });
+    const response = await fetch(API_URL + '/products/admin/all', { method: 'HEAD', mode: 'cors' });
     useApi = response.ok;
   } catch (e) {
     useApi = false;
@@ -473,7 +482,7 @@ async function checkApiAvailability() {
 async function getProducts() {
   if (useApi) {
     try {
-      const response = await fetch(API_URL + '/admin/all');
+      const response = await fetch(API_URL + '/products/admin/all');
       if (response.ok) return await response.json();
     } catch (e) {
       console.warn('API error, falling back to localStorage');
@@ -795,7 +804,7 @@ async function saveProduct() {
   if (useApi) {
     try {
       const method = editingProductId ? 'PUT' : 'POST';
-      const url = editingProductId ? `${API_URL}/${editingProductId}` : API_URL;
+      const url = editingProductId ? `${API_URL}/products/${editingProductId}` : `${API_URL}/products`;
       const response = await fetch(url, {
         method,
         headers: { 'Content-Type': 'application/json' },
@@ -847,7 +856,7 @@ async function toggleProductActive(id) {
       const products = await getProducts();
       const p = products.find(x => x.id === id);
       if (!p) return;
-      const response = await fetch(`${API_URL}/${id}`, {
+      const response = await fetch(`${API_URL}/products/${id}`, {
         method: 'PUT',
         headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify({ active: !p.active })
@@ -882,7 +891,7 @@ function closeConfirm() { document.getElementById('confirmModal').classList.remo
 async function deleteProduct(id) {
   if (useApi) {
     try {
-      const response = await fetch(`${API_URL}/${id}`, { method: 'DELETE' });
+      const response = await fetch(`${API_URL}/products/${id}`, { method: 'DELETE' });
       if (response.ok) {
         await renderProductsTable();
         updateSidebarCounts();
